--- a/Boot Camp Qualification Hackathon.ipynb
+++ b/Boot Camp Qualification Hackathon.ipynb
@@ -668,6 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filling Missing Values\n",
     "housing_train['bedroom'].fillna(2.4, inplace=True)\n",
     "housing_train['bathroom'].fillna(2.0, inplace=True)\n",
     "housing_train['parking_space'].fillna(0, inplace=True)"
@@ -676,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "919be615",
+   "id": "0629e4b0",
    "metadata": {},
    "outputs": [
     {
@@ -688,6 +689,7 @@
     }
    ],
    "source": [
+    "# Dropping missing rows from 'loc' and 'title'\n",
     "housing_train = housing_train.dropna()\n",
     "print(housing_train.shape)"
    ]
@@ -1306,7 +1308,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cc07baf3",
+   "id": "fcce9c39",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a053e770",
+   "id": "6cc2286e",
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7308a191",
+   "id": "266b9420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2235,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "12f4b08d",
+   "id": "7e9dd216",
    "metadata": {},
    "outputs": [
     {
@@ -2653,12 +2655,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_file.to_csv('lightGB_submission.csv', index=False)"
+    "sub_file.to_csv('lightGB1_submission.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6b012874",
+   "id": "af30e25c",
    "metadata": {},
    "source": [
     "### CatBoost Regressor"
@@ -2667,7 +2669,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "40fe0973",
+   "id": "8b2f53e3",
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2717,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "720bfcff",
+   "id": "93ed2da7",
    "metadata": {},
    "outputs": [
     {
@@ -2741,7 +2743,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "83a17125",
+   "id": "3d8161bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2751,16 +2753,16 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "24aa6ba4",
+   "id": "bf3bd03d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_file.to_csv('CatBoost_submission.csv', index=False)"
+    "sub_file.to_csv('CatBoost1_submission.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f62057e0",
+   "id": "e2f278ac",
    "metadata": {},
    "source": [
     "#### Blending Models"
@@ -2769,18 +2771,18 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "fcfe9e44",
+   "id": "f529af8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat_pred = pd.read_csv('CatBoost_submission.csv')['price']\n",
-    "lgb_pred = pd.read_csv('lightGB_submission.csv')['price']"
+    "cat_pred = pd.read_csv('CatBoost1_submission.csv')['price']\n",
+    "lgb_pred = pd.read_csv('lightGB1_submission.csv')['price']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2ed5970c",
+   "id": "b86415fe",
    "metadata": {},
    "outputs": [],
    "source": [
